@startuml
skinparam classAttributeIconSize 0

class CreateNewParameterUI{
}

class CreateNewParameterController{
    +CreateNewParameter(shortName, code, description, category)
    +getAllParameterCategories()
    +saveParameter()
}

class Company{
	-designation
	+getParameterStore()
	+getParameterCategoryStore()
}

class Parameter{
    -code
    -shortName
    -description
    +Parameter(code, shortName, description, category)
}

class ParameterStore{
    +createParameter(code, shortName, description, pcId)
    +validateParameter(p)
    +saveParameter(p)
    -addParameter()
}

class ParameterCategoryMapper {
    +toDTO(lPC)
}

class ParameterCategoryStore {
    + getAllParameterCategories()
}

class ParameterCategory{
    -code
    -name
    +ParameterCategory(code, name)
}

CreateNewParameterController <.left. CreateNewParameterUI
CreateNewParameterController .right.> Company
Company"1" --> "1"ParameterStore : uses
ParameterStore"1" -left-> "*"Parameter : store
Parameter"*" -down-> "1"ParameterCategory : presented under
Company"1" -left-> "1"ParameterCategoryStore : uses
CreateNewParameterController ..> ParameterCategoryStore
CreateNewParameterController .up.> ParameterCategoryMapper
CreateNewParameterController ..> ParameterStore
@enduml
